Database health check deactivation via configuration (#732)
* feat: enable health check configuration for consumer api

* feat: enable health check configuration for admin api

* feat: enable health check configuration for sse server checks

* chore: fix formatting

* fix: handle data annotation validation error

* fix: handle data annotation validation error

* fix: handle data annotation validation error

* fix: handle data annotation validation error

* fix: handle data annotation validation error

* feat: enable health check configuration for sse server

* fix: show tier in adnim api

* feat: undo appsetting.override for postgres and sqlserver json

* feat: remove push notification configuration

* feat: revert changes to SeeServer/Program.cs

* Update ConsumerApi/appsettings.json

Co-authored-by: Timo Notheisen <65653426+tnotheis@users.noreply.github.com>

* feat: remove prop

* feat: remove sse health check

* feat: enable healtcheck by default

* feat: perform the check outside of the method instead of passing EnableHealthCheck

* fix: vulnerability

* Revert "fix: vulnerability"

This reverts commit ae718fb6f91ba50fc56876ad62cbd67b9e4951b7.

* ci: exclude vulnerability from npm audit

---------

Co-authored-by: Nikola Vetnić <nikola.vojislav-vetnic@js-soft.rs>
Co-authored-by: Timo Notheisen <65653426+tnotheis@users.noreply.github.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>
Co-authored-by: Vladimir Vuckovic <vidrak97@gmail.com>
Co-authored-by: Timo Notheisen <timo.notheisen@js-soft.com>

--- a/AdminApi/src/AdminApi/appsettings.json
+++ b/AdminApi/src/AdminApi/appsettings.json
@@ -12,11 +12,23 @@
         }
     },
     "Modules": {
+        "Challenges": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
+            }
+        },
         "Quotas": {
             "Application": {
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         },
@@ -25,6 +37,11 @@
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         }
