--- a/SseServer/src/SseServer/appsettings.json
+++ b/SseServer/src/SseServer/appsettings.json
@@ -12,6 +12,11 @@
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
                 }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
             }
         }
     },
