--- a/Applications/AdminApi/src/AdminApi/AdminApi.csproj
+++ b/Applications/AdminApi/src/AdminApi/AdminApi.csproj
@@ -4,6 +4,10 @@
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
+    <ItemGroup Label="Packages references only to fix vulnerabilities">
+        <PackageReference Include="Azure.Identity" Version="1.11.4" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OData" Version="9.1.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
