--- a/Applications/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
+++ b/Applications/EventHandlerService/test/EventHandlerService.Tests/EventHandlerService.Tests.csproj
@@ -5,6 +5,10 @@
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
+    <ItemGroup Label="Packages references only to fix vulnerabilities">
+        <PackageReference Include="Azure.Identity" Version="1.11.4" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2">
             <PrivateAssets>all</PrivateAssets>
