--- a/Modules/Files/src/Files.ConsumerApi/Files.ConsumerApi.csproj
+++ b/Modules/Files/src/Files.ConsumerApi/Files.ConsumerApi.csproj
@@ -9,6 +9,9 @@
         <ProjectReference Include="..\Files.Infrastructure.Database.SqlServer\Files.Infrastructure.Database.SqlServer.csproj" />
         <ProjectReference Include="..\Files.Infrastructure\Files.Infrastructure.csproj" />
     </ItemGroup>
+    <ItemGroup Label="Packages references only to fix vulnerabilities">
+        <PackageReference Include="Azure.Identity" Version="1.11.4" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="9.0.0" />
