--- a/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
+++ b/Modules/Tags/src/Tags.ConsumerApi/Tags.ConsumerApi.csproj
@@ -5,6 +5,10 @@
         <ProjectReference Include="..\Tags.Infrastructure\Tags.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup Label="Packages references only to fix vulnerabilities">
+        <PackageReference Include="Azure.Identity" Version="1.11.4" />
+    </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="ReHackt.Extensions.Options.Validation" Version="9.0.0" />
     </ItemGroup>
